# dockerPro

./: Dockerfile  pyproject.toml
app/: main.py
