[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ghulam Mustafa <60027443+GHULAMMUSTAFA-JPG@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
